[BGPT/CAP] Create render surface for opacity effect with child

We delay render surface decision for opacity-only effects. Previously we
would create a render surface for an opacity-only effect only when we
saw more than one layer or child for the effect. This caused missing
render surface in the following case:

    Opacity (0.5)
        |
  No-op effect (for compositing)
        | -- layer1
Another no-op effect (for compositing)
        | -- layer2

Though the opacity node has only one child, it affects 2 layers through
its descendants, so a render surface is needed.

Now move the optimization for opacity-only-effects out of
PropertyTreeManager into PaintArtifactCompositor::
UpdateRenderSurfaceForEffects() which is run after all layers are
updated and can handle the bug case.

Bug: 905859
Change-Id: Id2e63b42ef539f7bd97357389d4b31a908cbe50a
Reviewed-on: https://chromium-review.googlesource.com/c/1357083
Reviewed-by: Philip Rogers <pdr@chromium.org>
Commit-Queue: Xianzhu Wang <wangxianzhu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#614134}
Former-commit-id: d560b578390fb80b01229e8db64a878eb7e8dfb8